--- a/TrafficLightApp/Base.lproj/Main.storyboard
+++ b/TrafficLightApp/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="START"/>
                                 <connections>
-                                    <action selector="startBatton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lZB-kt-Krd"/>
+                                    <action selector="startButtonDidTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="8is-0B-nUE"/>
                                 </connections>
                             </button>
                         </subviews>
